--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DATABASE = mongodb://localhost:27017/Authentication_v3
+TOKEN = JFJFEJRIasdjfnwejioqweio123448dnkgirtje945kn`dfbmdllbd+mndkfgkkmnb
